@@ -1,6 +1,11 @@
+include $(top_srcdir)/common.mk
+
 SUBDIRS = 
 
 if HAVE_LIBGNOMEUI
 SUBDIRS += gw
 endif
 
+guilemodule_DATA = gnome-ui.scm
+
+EXTRA_DIST = gnome-ui.scm
