@@ -1,3 +1,7 @@
+2004-08-06  Andreas Rottmann  <a.rottmann@gmx.at>
+
+	* gnome/Makefile.am: Distribute and install gnome-ui.scm.
+
 2004-07-01  Andy Wingo  <wingo@pobox.com>
 
 	* gnome/gw/libgnomeui-spec.scm (initialize): Fix for depends-on!.
